[package]
name = "lyrs"
description = "Command line aplication to view lyrics"
version = "0.1.2"
keywords = ["lyrics", "music", "search"]
categories = ["Utility"]
authors = ["alt-art <pedromendescraft@gmail.com>"]
repository = "https://github.com/alt-art/lyrs"
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genius-rs = "0.5.0"
ansi_term = "0.12.1"
clap = { version = "3.1.18", features = ["derive"] }
dirs = "4.0.0"
open = "3.0.1"
serde = {version = "1.0.137", features=["derive"]}
toml = "0.5.9"
tokio = {version = "1.19.2", features = ["full"]}
anyhow = "1.0.57"

[target.'cfg(unix)'.dependencies]
pager = "0.16.0"

[package.metadata.deb]
maintainer = "Pedro Mendes <pedromendescraft@gmail.com>"
copyright = "2020, Pedro Mendes <pedromendescraft@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = "Command line application to view lyrics using Genius API"
section = "utils"
priority = "optional"
assets = [
    # Binary
    ["target/release/lyrs", "/usr/bin/", "111"],
]